# prottrans-t5-signalpeptide-prediction

./: .flake8  .gitignore  LICENSE  Makefile  README.md  deepspeed_config.yaml  pyproject.toml
data/processed/: 5.0_train.parquet.gzip
models/linear_model/: adapter_config.json
models/linear_model_10e/: adapter_config.json
models/linear_model_working_v5/: training_log.parquet
models/moe_gate_1/: training_log.csv
models/moe_v1_crf_expert_ALL/: training_log.csv  training_log.parquet
models/moe_v1_crf_expert_LIPO/: training_log.parquet
models/moe_v1_crf_expert_NO_SP/: training_log.csv
models/moe_v1_crf_expert_TAT/: training_log.csv  training_log.parquet
models/moe_v1_expert_ALL/: adapter_config.json  training_log.csv  training_log.parquet
notebooks/: 00_data.ipynb  00_lora-linear-model-predict.ipynb  00_lora-linear-model-train.ipynb  00_moe_expert_train.ipynb  00_moe_gate_train.ipynb  00_moe_predict.ipynb  00_new_predict.ipynb  00_new_train.ipynb  00_new_train.py  00_seq_cls.ipynb  00_working_evaluation.ipynb  00_working_lora-linear-model-train.ipynb  00_working_predict.ipynb  00_working_train.ipynb  01_benchmark.ipynb  01_signalp6_benchmark.ipynb  01_t5_embedding_space.ipynb  99_old_code_dump.py  99_test.ipynb  data.ipynb  evaluate.ipynb  lora-linear-model-predict.ipynb  lora-linear-model-train.ipynb  lora-linear-model.ipynb  plots.ipynb  plots_2.ipynb  random-baseline.ipynb  readme.md  test.ipynb  train-embeddings.ipynb
src/: config.py  data.py  embeddingmodel.py  evaluation.py  model.py  model_new.py  model_working.py  utils.py
(+48 files in other folders)
