[tool.poetry]
name = "src"
version = "0.1.0"
description = "None"
authors = ["Finn Lueth"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
torch = "^2.0.1"
transformers = "^4.33.3"
peft = "^0.5.0"
sentencepiece = "^0.1.99"
fastparquet = "^2023.8.0"
evaluate = "^0.4.0"
seqeval = "^1.2.2"
protobuf = "^4.24.3"
bitsandbytes = "^0.41.1"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"
swifter = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"
jupyterlab = "^4.0.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
